# model-library

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.redshift-export  LICENSE  Makefile  README.md  load.py  pyproject.toml  requirements-redshift-export-lambda.txt
.github/workflows/: claude.yml  publish.yml  stale.yml  style.yaml  test.yaml  typecheck.yml
docs/: agent.md  api-keys.md  atif.md  chat.md  conductor.md  config.md  cost-alerts.md  docent.md  gateway-migration.md  gateway.md  result.md  token-retry.md
examples/: README.md  __main__.py  _cli.py  agent.py  basics.py  count_tokens.py  custom_endpoint.py  embeddings.py  files.py  images.py  inputs.py  prompt_caching.py  quickstart.py  rate_limit.py  setup.py  test_model.py  token_retry.py  tool_calls.py  tools.py  utils.py  validate_model.py
examples/advanced/: batch.py  custom_retrier.py  deep_research.py  stress.py  structured_output.py  web_search.py
examples/agent/: atif.py  basic.py  builtin_web_search.py  docent.py  replay.py  resume.py
examples/data/: audio.py  files.py  images.py
examples/diagnostics/: rate_limit.py  token_retry.py
examples/extras/: agent_flows.py  artifacts.py  batch.py  count_tokens.py  deep_research_openai.py  google_modes.py  load.py  prompt_caching.py  provider_setup.py  structured_output.py
model_gateway/: app.py  asgi_observability.py  auth.py  benchmark_admission_state.py  benchmark_admission_types.py  cache.py  capacity.py  errors.py  history.py  main.py  metrics.py  model_helpers.py  observability.py  route_helpers.py  startup_canary.py  telemetry_helpers.py  types.py
model_gateway/routes/: __init__.py  benchmark_admission.py  health.py  models.py  provider_ops.py  query.py  token_retry.py
model_gateway/usage_ledger/: __init__.py  details.py  dynamodb_writer.py  lambda_handler.py  message.py  redshift_export.py  redshift_export_job.py  redshift_load.py  redshift_schema.py  redshift_transform.py  schema.py  store.py
model_gateway/usage_ledger/cost_alerts/: __init__.py  handler.py  rules.py  slack.py
model_gateway/usage_ledger/lambdas/: __init__.py  writer.py
model_library/: __init__.py  atif.py  base.py  custom_register_models.py  docent.py  exceptions.py  file_utils.py  logging.py  model_utils.py  openrouter_registry.py  query_utils.py  register_models.py  registry_utils.py  settings.py  telemetry.py  utils.py
model_library/agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  history_compaction.py  hooks.py  metadata.py  tool.py
model_library/agent/conductor/: __init__.py  conductor.py  config.py  metadata.py
model_library/agent/tools/: __init__.py  bash.py  stop.py  submit.py  web_search.py
model_library/base/: __init__.py  base.py  batch.py  delegate_only.py  gateway.py  input.py  output.py  query_ids.py  query_logging.py  serialize.py  utils.py
model_library/base/output/: __init__.py  builder.py  performance.py  result.py
model_library/config/: README.md  ai21labs_models.yaml  alibaba_models.yaml  all_models.json  amazon_models.yaml  anthropic_models.yaml  arcee_models.yaml  cohere_models.yaml  cursor_models.yaml  deepseek_models.yaml  devin_models.yaml  dummy_model.yaml  fireworks_models.yaml  google_models.yaml  inception_models.yaml  kimi_models.yaml  meta_models.yaml  minimax_models.yaml  mistral_models.yaml  nvidia_models.yaml  openai_models.yaml  perplexity_models.yaml  poolside_models.yaml  thinkingmachines_models.yaml  together_models.yaml  xai_models.yaml  xiaomi_models.yaml  zai_models.yaml
model_library/config/deprecated/: ai21labs_models.yaml  alibaba_models.yaml  amazon_models.yaml  anthropic_models.yaml  cohere_models.yaml  fireworks_models.yaml  google_models.yaml  kimi_models.yaml  mistral_models.yaml  openai_models.yaml  perplexity_models.yaml  together_models.yaml  xai_models.yaml  zai_models.yaml
model_library/providers/: ai21labs.py  alibaba.py  amazon.py  anthropic.py  azure.py  cohere.py  deepseek.py  fireworks.py  inception.py  kimi.py  minimax.py  mistral.py  openai.py  openrouter.py  perplexity.py  together.py  vals.py  vercel.py  xai.py  xiaomi.py  zai.py
model_library/providers/delegates/: alibaba.py  arcee.py  cohere.py  deepseek.py  fireworks.py  inception.py  kimi.py  meta.py  minimax.py  nvidia.py  openrouter.py  perplexity.py  poolside.py  thinkingmachines.py  together.py  vercel.py  xiaomi.py  zai.py
model_library/providers/google/: __init__.py  batch.py  google.py
model_library/retriers/: backoff.py  base.py  token.py  utils.py
model_library/retriers/token/: __init__.py  background.py  benchmark_admission.py  (+4 more)
model_library/web/: __init__.py  __main__.py  chat.py
scripts/: browse_models.py  check_portkey_pricing.py  config.py  deprecate_model.py  explore_models.py  live_provider_id_smoke.py  publish.py  run_models.py
tests/: README.md  conftest.py  test_helpers.py
tests/integration/: conftest.py  test_audio.py  test_basic.py  test_batch.py  test_completion.py  test_files.py  test_google_delegate.py  test_long_problem.py  test_reasoning.py  test_retry.py  test_serialize.py  test_streaming.py  test_structured_output.py  test_tools.py
tests/unit/: conftest.py  provider_response_helpers.py  test_agent.py  test_atif.py  test_background_loops.py  test_batch.py  test_benchmark_admission.py  test_benchmark_admission_client.py  test_benchmark_queue.py  test_config_surface.py  test_context_window.py  test_count_tokens.py  test_custom_register_models.py  test_deep_research.py  test_docent.py  test_endpoint_config.py  test_finish_reason.py  test_gateway_imports.py  test_gateway_registry_cache.py  test_gateway_response_compatibility.py  test_get_client.py  test_load.py  test_logging.py  test_model_registry.py  test_model_utils.py  test_openai_config.py  test_output_schema.py  test_perplexity_provider.py  test_prompt_caching.py  test_provider_configs.py  test_proxy_mode.py  test_query_logger.py  test_query_result_builder.py  test_query_utils.py  test_registry.py  test_result_metadata.py  test_retry.py  test_run_identity.py  test_sanitize_content.py  test_serialize.py  (+9 more)
(+58 files in other folders)
