[project]
name = "model-library"
authors = [
  { name = "Vals AI, Inc.", email = "contact@vals.ai" },
]
dynamic = ["version"]
description = "Model Library for vals.ai "
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  # base
  "typing-extensions>=4.15.0,<5.0",
  "pydantic>=2.12.5,<3.0",
  "pyyaml>=6.0.3,<7.0",
  "rich>=14.3.3,<15.0",
  # core
  "backoff>=2.2.1,<3.0",
  "redis>=6.4.0,<7.0",
  "tiktoken>=0.12.0,<1.0",
  "pillow>=12.1.1,<13.0",
  # providers
  "openai>=2.28.0,<3.0",
  "anthropic>=0.89.0,<1.0",
  "mistralai>=2.0.4,<3.0",
  "xai-sdk>=1.7.0,<2.0",
  "ai21>=4.3.0,<5.0",
  "boto3>=1.38.27,<2.0",
  "google-genai[aiohttp]>=1.67.0,<2.0",
  "google-cloud-storage>=3.9.0,<4.0",
]

[project.scripts]
model-agent = "model_library.agent.cli:main"

[dependency-groups]
dev = [
  # test
  "pytest",
  "pytest-asyncio",
  "pytest-xdist",
  # style
  "ruff",
  "basedpyright",
  # tui
  "inquirerpy",
  # env
  "boto3",
  "dotenv",
  "fakeredis[lua]",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["model_library"]

[tool.setuptools.package-data]
"model_library" = ["py.typed", "config/*.yaml", "config/defaults/*.yaml", "config/defaults/*.json", "config/all_models.json"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
tag_regex = "^v(?P<version>.*)$"

[tool.ruff]
exclude = [
  "model_library/config",
  ".*",
  "tests/**",
  "build/**",
]

[tool.basedpyright]
exclude = [
  "model_library/config",
  ".*",
  "tests/**",
  "build/**",
]
typeCheckingMode = "strict"
reportExplicitAny = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests that don't require external resources",
    "integration: Integration tests that require API keys and external services",
]
# Async test configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
